--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.3.0
   flutter_riverpod: ^2.6.1
   timeline_list: ^0.1.0
+  provider: ^6.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
